--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -33,8 +33,8 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  color: #77002e;
-  border: 1px solid #77002e;
+  color: #00a0e3;
+  border: 1px solid #00a0e3;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
