--- a/components/meetups/NewMeetupForm.module.css
+++ b/components/meetups/NewMeetupForm.module.css
@@ -30,16 +30,16 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color: #77002e;
+  background-color: #00a0e3;
   color: white;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #77002e;
+  border: 1px solid #00a0e3;
   border-radius: 4px;
   font-weight: bold;
 }
 
 .actions button:hover,
 .actions button:active {
-  background-color: #a50e48;
-  border-color: #a50e48;
+  background-color: #00a0e3;
+  border-color: #00a0e3;
 }
