--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -33,7 +33,6 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  color: #00a0e3;
   border: 1px solid #00a0e3;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
@@ -42,5 +41,6 @@
 
 .actions button:hover,
 .actions button:active {
-  background-color: #ffe2ed;
+  background-color: #00a0e3;
+  color: white;
 }
