--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -6,8 +6,8 @@
   width: 100%;
   height: 20rem;
   overflow: hidden;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
+  border-radius: 6px;
+
 }
 
 .image img {
