--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 body {
   font-family: "Open Sans", "Lato", sans-serif;
   margin: 0;
-  background-color: #fee9b1;
+  /* background-color: #fee9b1; */
 }
 
 h1,
